title textwrap fix

--- a/sass/partials/_page.scss
+++ b/sass/partials/_page.scss
@@ -38,7 +38,7 @@ header {
 		margin: 0;
 		span {
 			display: block;
-			
+			white-space: nowrap;
 		}
 	}
 
